<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/background_color_additional"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/idLL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="2"
                    android:padding="4dp"
                    android:text="@string/name"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:text="@string/quantity"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1.5"
                    android:padding="4dp"
                    android:text="@string/rate"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/delete"
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/delete_btn"
                    android:padding="4dp"
                    android:src="@drawable/ic_baseline_delete_24"
                    app:tint="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/totalCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idLL1"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:layout_toStartOf="@+id/amount"
                android:padding="4dp"
                android:text="@string/total_cost"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idLL1"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:padding="4dp"
                android:text="@string/amount"
                android:textColor="@color/white" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>